fix(stepindicator): fix label mobile visibility and unit test correction

--- a/packages/themes/src/bootstrap/artbasel/scss/_step_indicator.scss
+++ b/packages/themes/src/bootstrap/artbasel/scss/_step_indicator.scss
@@ -99,17 +99,26 @@
 
     .label-style {
       display: none;
+      font-size: 0.875rem;
+      color: $color-mch-black;
+      text-decoration: none;
 
       @include media-breakpoint-up(md) {
         display: block;
-        font-size: 0.875rem;
-        color: $color-mch-black;
-        text-decoration: none;
       }
 
       &-disabled {
         @extend .label-style;
         color: $color-mch-gray-300;
+      }
+
+      &.vertical {
+        display: block;
+        padding-top: 0.5rem;
+        
+        @include media-breakpoint-up(md) {
+          padding-top: 0;
+        }
       }
     }
 
